Refactor image section in author.html

--- a/author.html
+++ b/author.html
@@ -32,8 +32,10 @@
                 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/72wpH6x9mejQLKEnOcY70h?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6dvbvlqV5sVyA3s8o16GRh?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
-            <div class="images">
-                <img src="images/author/Alignmentferry.webp" alt="alignmentferry">
+            <div class="image-handler">
+                <div class="images">
+                    <img src="images/author/Alignmentferry.webp" alt="alignmentferry">
+                </div>
             </div>
         </div>
 
