Fix image source path in tips.html

--- a/tips.html
+++ b/tips.html
@@ -13,7 +13,7 @@
         <div class="top">
         <div class="title-container">
             <p>Ciekawostki</p>
-            <img src="../images/icon.png" alt="icon">
+            <img src="images/icon.png" alt="icon">
         </div>
         <div class="button-container">
             <button onclick='location.href="index.html"' class="clicksfx">glowna</button>
