--- a/author.html
+++ b/author.html
@@ -33,8 +33,8 @@
                 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6dvbvlqV5sVyA3s8o16GRh?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
             <div class="image-handler">
-                <div class="images">
-                    <img src="images/author/Alignmentferry.webp" alt="alignmentferry">
+                <div>
+                    <img src="images/author/Alignmentferry.webp" alt="alignmentferry" class="images">
                 </div>
             </div>
         </div>
